--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.8.4",
     "firebase": "^11.5.0",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-multi-carousel": "^2.8.5",
     "react-router": "^7.2.0",
     "react-three-fiber": "^6.0.13",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.17",
     "three": "^0.174.0"
   },
